src/styles/body.scss
:root {
  font-size: calc(95% + 0.3vmin);
}

.body {
  --lighter-color: rgb(231, 191, 0);
  --darker-color: rgb(229, 112, 0);
  --gradient: linear-gradient(var(--lighter-color), var(--darker-color));
  --text-color: white;
  --filter: none;
  font-family: 'Ubuntu', sans-serif;
  background: var(--gradient);
  color: var(--text-color);
  min-height: 100vh;
  width: 100vw;
  height: fit-content;
  display: flex;
  flex-direction: column;
}

.body_theme_dark {
  --lighter-color: rgb(92, 107, 204);
  --darker-color: rgb(74, 18, 151);
  --filter: invert(1);
}

